# Xchat-clone

./: Cargo.toml  Dockerfile  README.md  fly.toml  render.yaml
migrations/: 001_create_tables.sql
src/: crypto.rs  db.rs  main.rs  models.rs  routes.rs  utils.rs  webrtc.rs
static/: app.js  index.html  style.css
