[package]
name = "xchat-clone"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-multipart = "0.6"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
tokio = { version = "1", features = ["full"] }
secp256k1 = { version = "0.27", features = ["rand-std"] }
aes-gcm = "0.10"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
log = "0.4"
serde_json = "1.0"
hex = "0.4"
futures-util = "0.3"
bytes = "1.7" # Added for Bytes
